# TexQuery

./: .output.txt.swp  README.md
examples/latex_ex/: equation.tex
latexpapergpt/: Vectordatabaseguide.txt  arxivscraperunthreaded.py  pdftolatex.py
latexpapergpt/VectorDatabase/: extractfiles.py  extracttexfiles.py  latexpackageinstaller.py  texparser.py
papers/arXiv-2409.08361v1/: .paper.tex.swp  paper.bbl  paper.bib  paper.tex
papers/arXiv-2409.08373v1/: main_v1_nobold.tex
papers/arXiv-2409.08451v1/: asm_efold_typ.eps  burst_phase_cg01_4eph.eps  lc_plots.eps  ms_arxiv1.tex  period_time.eps  ph_evol_all.eps  powspec_plots.eps  profile_comb_glitch.eps  profile_comb_qua.eps
papers/arXiv-2409.09122v1/: bibliography.bib  main.bbl  main.tex
papers/arXiv-2409.09597v1/: sample631.bbl  sample631.bib  sample631.tex
papers/arXiv-2409.10485v1/: apj.bst  main.bbl  main.bib  main.tex
papers/arXiv-2409.10517v1/: aa.bbl  aa.tex  references.bib
src/: .latex_chunks.json.swp  .suffix_tree.cpp.swp  Makefile  ast.cpp  ast.h  crf_model.cpp  crf_model.h  dag_node.cpp  dag_node.h  document.json  emulation.tex  fsm.cpp  fsm.h  hamil.tex  hun.tex  hun2.tex  latex_chunks.json  lexer.cpp  lexer.h  main.cpp  main.tex  main_ex.tex  ner.cpp  ner.h  paper.py  parser  parser.cpp  parser.h  parser_state.h  search.py  suffix_tree  suffix_tree.cpp  suffix_tree_work.cpp  symbol_table.cpp  symbol_table.h  test.tex
test_suite/: CMakeLists.txt  main.cc  main.h
test_suite/src/: PromptWindow.cc  PromptWindow.h  TestSuite.cc  TestSuite.h  TextWindow.cc  TextWindow.h  id_cat.h
(+194 files in other folders)
